tmux, vim with mouse (using MouseTerm for Terminal.app)
Previous workaround for tmux filling scroll buffer somehow breaks the
xterm window title support, so disabling:

    set -g terminal-overrides 'xterm*:smcup@:rmcup@'

Instead, MouseTerm, a great SIMBL plugin for OS X's Terminal.app makes
it possible to not only access tmux's scroll buffer with trackpad
gestures, but also use terminal Vim almost like the GUI one. :)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,13 +50,30 @@ set-option -g base-index 1
 set-option -g set-titles on
 set-option -g display-time 2500
 set-option -g history-limit 10000000
-set-window-option -g monitor-activity on
+set-option -g status-keys vi
 set-window-option -g mode-keys vi
+set-window-option -g monitor-activity on
 set-window-option -g clock-mode-style 24
+set-window-option -g wrap-search off
 
+## mouse options
+# In Apple's Terminal.app, option-click works by default, but MouseTerm SIMBL
+# plugin (https://bitheap.org/mouseterm/) is highly recommended!
+# See: http://superuser.com/questions/125102/mac-os-x-terminal-mouse-support
+# XXX In copy-mode, clicking/dragging doesn't work somehow; Only scrolling and
+# option-click works for now.
+set-window-option -g mode-mouse on
+set-window-option -g mouse-select-window on
+set-window-option -g mouse-select-pane on
+set-window-option -g mouse-resize-pane on
+set-window-option -g mouse-utf8 on
+
+# XXX Disabling this for somehow breaking tmux's set-titles option
+# ("mode-mouse on" with MouseTerm saved me though)
 # allow buffer scrolling also for xterm-likes
 # See: https://bbs.archlinux.org/viewtopic.php?id=102217
-set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+# See: http://superuser.com/questions/210125/scroll-shell-output-with-mouse-in-tmux/300716#300716
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
 
 ### Key Bindings
