tmux.conf using if-shell conditional

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -161,5 +161,9 @@ bind Tab select-pane -t :.+
 bind C-o select-pane -t :.-
 
 
+# Mac-specific settings
+if-shell "type reattach-to-user-namespace" 'set-option -g default-command "reattach-to-user-namespace -l bash -l"'
+
+
 # local config
-source-file ~/.tmux_local
+if-shell "[ -e ~/.tmux_local ]" "source-file ~/.tmux_local"
