--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "Mac/DefaultFontFallbacksChanger"]
-	path = Mac/DefaultFontFallbacksChanger
-	url = git://github.com/netj/MacOSXDefaultFontFallbacksChanger.git
 [submodule ".bash/plugins"]
 	path = .bash/plugins
-	url = git://github.com/netj/bpm
+	url = https://github.com/netj/bpm.git
+[submodule "Mac/DefaultFontFallbacksChanger"]
+	path = Mac/DefaultFontFallbacksChanger
+	url = https://github.com/netj/MacOSXDefaultFontFallbacksChanger.git
