--- a/gnome-terminal/Makefile
+++ b/gnome-terminal/Makefile
@@ -1,10 +1,14 @@
 # gnome-terminal profile
-NAME=Wizard
-install:
+PROFILE_FILES = $(wildcard *.xml)
+PROFILES = $(PROFILE_FILES:%.xml=%)
+
+install: $(PROFILES)
+$(PROFILES): NAME=$@
+$(PROFILES):
 	key=/apps/gnome-terminal/global/profile_list;\
 	profiles=`gconftool --get $$key | \
 	sed -e 's/^\[\|\]$$//g' | tr , '\n' | grep -v "^$(NAME)$$" | \
 	grep -v '^$$' | tr '\n' ,`; \
 	gconftool --set --type=list --list-type=string \
 		$$key "[$${profiles}$(NAME)]"
-	gconftool --load gconf.xml
+	gconftool --load $(NAME).xml
