Set tmux to start shell with adjusted SHLVL

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -162,8 +162,8 @@ bind C-o select-pane -t :.-
 
 
 # Mac-specific settings
-if-shell "type reattach-to-user-namespace" 'set-option -g default-command "reattach-to-user-namespace -l bash -l"'
-
+if-shell "type reattach-to-user-namespace" 'set-option -g default-command "reattach-to-user-namespace -l env SHLVL=0 bash -l"'
+if-shell "! type reattach-to-user-namespace" 'set-option -g default-command "env SHLVL=0 bash -l"'
 
 # local config
 if-shell "[ -e ~/.tmux_local ]" "source-file ~/.tmux_local"
