Updates tmux config for 2.0
window-status-content-* window-options have been removed

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,10 +40,17 @@ set-window-option -g window-status-current-fg white
 set-window-option -g window-status-current-attr bright
 set-window-option -g window-status-activity-fg green
 set-window-option -g window-status-activity-attr none
-set-window-option -g window-status-content-fg yellow
-set-window-option -g window-status-content-attr none
 set-window-option -g window-status-bell-fg red
 set-window-option -g window-status-bell-attr none
+
+# TODO tmux 2.0
+#set-option -g  status-style bg=black
+#set-option -ga status-style fg=brightblack
+#set-option -g  status-left-style fg=white,bright
+#set-window-option -g window-status-style fg=brightblack
+#set-window-option -g window-status-current-style fg=white,bright
+#set-window-option -g window-status-activity-style fg=green
+#set-window-option -g window-status-bell-style fg=red
 
 # some more options
 set-option -g base-index 1
