tmux.conf mouse config for both 2.1 and pre-2.1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -69,11 +69,16 @@ set-window-option -g wrap-search off
 # See: http://superuser.com/questions/125102/mac-os-x-terminal-mouse-support
 # XXX In copy-mode, clicking/dragging doesn't work somehow; Only scrolling and
 # option-click works for now.
-set-window-option -g mode-mouse on
-set-window-option -g mouse-select-window on
-set-window-option -g mouse-select-pane on
-set-window-option -g mouse-resize-pane on
-set-window-option -g mouse-utf8 on
+if-shell "[[ `tmux -V` == *2.1 ]]" '\
+    set-window-option -g mouse on  ;\
+    '
+if-shell "[[ `tmux -V` == *1.*|*2.0 ]]"         '\
+    set-window-option -g mode-mouse on          ;\
+    set-window-option -g mouse-select-window on ;\
+    set-window-option -g mouse-select-pane on   ;\
+    set-window-option -g mouse-resize-pane on   ;\
+    set-window-option -g mouse-utf8 on          ;\
+    '
 
 # XXX Disabling this for somehow breaking tmux's set-titles option
 # ("mode-mouse on" with MouseTerm saved me though)
