Migrates to Vundle from VAM
with a cute Vundle bootstrap code

--- a/.vim/Makefile
+++ b/.vim/Makefile
@@ -7,28 +7,11 @@ export SHELL := $(shell which bash)
 .PHONY: all
 all: $(shell sed <Makefile -n '/:.*\#\#$$/ s/:.*$$//p')
 
-# VAM installation
-vam-update: ##
-	read -p "update vim-addons? [yN] " -n1 -t2 || echo n; \
-	case $$REPLY in [yY]) echo "updating vim-addons..." ;; *) exit 0 ;; esac; \
-	GIT_SSL_NO_VERIFY=true \
-	vim -u NONE -i NONE \
-	    +"set nomore | source ~/.vim/addons.vim" \
-	    +"set nomore | UpdateAddons vim-addon-manager-known-repositories" \
-	    +"set nomore | UpdateActivatedAddons" \
-	    +"qa" \
-	    #
-
-vim-addons-bash_local: ##
-	vim -n -u NONE -i NONE \
-	    ~/.bash_local + \
-	    +"g/^## vim with addons {{{$$/,/^## }}}$$/d" \
-	    +"let o='O' | if line('.')==line('$$') | let o='o'" \
-	    +"exec 'norm '.o.'## vim with addons {{{'" \
-	    +'r!sed -n '\''/".*add.*alias.*>$$/,/^"<$$/{/^"   /s/^" *//p;}'\'' <~/.vimrc' \
-	    +"norm o## }}}" \
-	    +wq \
-	    #
+# vundle installation
+vundle-update: ##
+	read -p "update .vim/bundle/? [yN] " -n1 -t2 || echo n; \
+	case $$REPLY in [yY]) echo "updating .vim/bundle/..." ;; *) exit 0 ;; esac; \
+	vim +PluginInstall +qa
 
 # tpope's spelling fixes using :Abolish
 tpopes-abbrevs: after/plugin/abolish_tpope.vim ##
