Adds tmux 2.1 mouse mode workaround (tmux/tmux#145)
maintaining settings for <= 2.0

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,21 +64,27 @@ set-window-option -g clock-mode-style 24
 set-window-option -g wrap-search off
 
 ## mouse options
-# In Apple's Terminal.app, option-click works by default, but MouseTerm SIMBL
-# plugin (https://bitheap.org/mouseterm/) is highly recommended!
-# See: http://superuser.com/questions/125102/mac-os-x-terminal-mouse-support
-# XXX In copy-mode, clicking/dragging doesn't work somehow; Only scrolling and
-# option-click works for now.
-if-shell "[[ `tmux -V` == *2.1 ]]" '\
-    set-window-option -g mouse on  ;\
-    '
-if-shell "[[ `tmux -V` == *1.*|*2.0 ]]"         '\
-    set-window-option -g mode-mouse on          ;\
-    set-window-option -g mouse-select-window on ;\
-    set-window-option -g mouse-select-pane on   ;\
-    set-window-option -g mouse-resize-pane on   ;\
-    set-window-option -g mouse-utf8 on          ;\
-    '
+# mouse options changed since in 2.1 with some bugs not auto starting
+# See: https://github.com/tmux/tmux/issues/145
+if-shell "[ `tmux -V|cut -d' ' -f2` \\> 2.0 ]"                  "\
+    set-window-option -g mouse on                               ;\
+    bind -n WheelUpPane \
+        if-shell -F -t= \"#{mouse_any_flag}\" \
+            \"send-keys -M\" \
+            \"if -Ft= '#{pane_in_mode}' \
+                'send-keys -M' \
+                'select-pane -t=; copy-mode -e; send-keys -M'\" ;\
+    bind -n WheelDownPane \
+                 select-pane -t=\\;             send-keys -M    ;\
+    "
+# mouse options up to 2.0
+if-shell "[ ! `tmux -V|cut -d' ' -f2` \\> 2.0 ]" "\
+    set-window-option -g mode-mouse on           ;\
+    set-window-option -g mouse-select-window on  ;\
+    set-window-option -g mouse-select-pane on    ;\
+    set-window-option -g mouse-resize-pane on    ;\
+    set-window-option -g mouse-utf8 on           ;\
+    "
 
 # XXX Disabling this for somehow breaking tmux's set-titles option
 # ("mode-mouse on" with MouseTerm saved me though)
