--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,7 @@ set-option -g set-titles-string "#T - #I:#W#F#S^#H"
 set-option -g status-justify right
 set-option -g status-left "#T"
 set-option -g status-left-length 48
-set-option -g status-right "#[fg=white,bright]#S#[default]^#H"
+set-option -g status-right "#[fg=white,bright]#S#[default]^#[fg=white]#H#[default]"
 set-option -g status-right-length 16
 
 # 256 color: XXX tmux should be launched with option -2.
@@ -34,14 +34,14 @@ set-option -g status-fg brightblack
 set-option -g status-attr none
 set-window-option -g window-status-fg brightblack
 set-window-option -g window-status-attr none
-set-option -g status-left-fg white
+set-option -g status-left-fg yellow
 set-option -g status-left-attr bright
-set-window-option -g window-status-current-fg white
+set-window-option -g window-status-current-fg yellow
 set-window-option -g window-status-current-attr bright
 set-window-option -g window-status-activity-fg green
-set-window-option -g window-status-activity-attr none
+set-window-option -g window-status-activity-attr bright
 set-window-option -g window-status-bell-fg red
-set-window-option -g window-status-bell-attr none
+set-window-option -g window-status-bell-attr bright
 
 # TODO tmux 2.0
 #set-option -g  status-style bg=black
