tmux adds key bindings (m/M) for toggling silence/activity monitoring

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -156,6 +156,9 @@ bind ^R source ~/.tmux.conf
 # record window
 bind-key | pipe-pane -o 'cat >>~/tmux-#S.#I.#P.log'
 
+# toggle activity/silence monitoring
+bind M setw monitor-activity on\; setw monitor-silence 0
+bind m command-prompt -p "monitor-silence (seconds)" "setw monitor-activity off; setw monitor-silence %%"
 
 ## vim style key bindings
 
