Switches tmux active window color to green
as it somehow stands out better than yellow

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -34,11 +34,11 @@ set-option -g status-fg brightblack
 set-option -g status-attr none
 set-window-option -g window-status-fg brightblack
 set-window-option -g window-status-attr none
-set-option -g status-left-fg yellow
+set-option -g status-left-fg green
 set-option -g status-left-attr bright
-set-window-option -g window-status-current-fg yellow
+set-window-option -g window-status-current-fg green
 set-window-option -g window-status-current-attr bright
-set-window-option -g window-status-activity-fg green
+set-window-option -g window-status-activity-fg yellow
 set-window-option -g window-status-activity-attr bright
 set-window-option -g window-status-bell-fg red
 set-window-option -g window-status-bell-attr bright
