vim-tmux-navigator and vimux with a few enhancements
Using Ctrl+Alt instead of just Ctrl, since it's really hard to give up
Ctrl+L.

Also achieves uniform behavior across INSERT+NORMAL mode by tmux's
prefixing vim's normal commands for vimux with CTRL-\ CTRL-O

Inspired by the article "Vim + Tmux even better together" https://blog.bugsnag.com/tmux-and-vim/

MacVim and macOS Terminal.app Cmd-to-Alt key combos are taken care by
our beloved BetterTouchTool

--- a/.inputrc
+++ b/.inputrc
@@ -60,6 +60,10 @@ set completion-query-items -1  # without disabling this, menu-complete may not w
 "\e\C-f": "\e]/"
 
 
+# Quickly repeat last history item
+"\e\C-m": "\C-p\C-m"
+
+
 # Bash-specific READLINE Tweaks
 # See-Also: http://www.ukuug.org/events/linux2003/papers/bash_tips/
 $if Bash
