--- a/.tmux.conf
+++ b/.tmux.conf
@@ -182,6 +182,28 @@ bind Tab select-pane -t :.+
 bind C-o select-pane -t :.-
 
 
+## Vim and Tmux better together: https://blog.bugsnag.com/tmux-and-vim/
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+# quicker vim-like split
+bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h"
+bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v"
+# uniform vim-tmux-navigation with Ctrl+Alt+h/j/k/l
+bind-key -n C-M-h if-shell "$is_vim" "send-keys C-\\ C-o C-M-h"  "select-pane -L"
+bind-key -n C-M-j if-shell "$is_vim" "send-keys C-\\ C-o C-M-j"  "select-pane -D"
+bind-key -n C-M-k if-shell "$is_vim" "send-keys C-\\ C-o C-M-k"  "select-pane -U"
+bind-key -n C-M-l if-shell "$is_vim" "send-keys C-\\ C-o C-M-l"  "select-pane -R"
+bind-key -n C-M-\ if-shell "$is_vim" "send-keys C-\\ C-o C-M-\\" "select-pane -l"
+# vimux
+bind-key -n C-M-m if-shell "$is_vim" "send-keys C-\\ C-o C-M-m"  "send-keys C-M-m"
+bind-key -n C-M-] if-shell "$is_vim" "send-keys C-\\ C-o C-M-]"  "send-keys C-M-]"
+bind-key -n C-M-[ if-shell "$is_vim" "send-keys C-\\ C-o C-M-["  "send-keys C-M-["
+
+
+# vimux zoom pane and return
+bind-key -n C-M-z if-shell "$is_vim" "send-keys C-\\ C-o C-M-z"  "select-pane -l"
+
+
 # Mac-specific settings
 if-shell "type reattach-to-user-namespace" 'set-option -g default-command "reattach-to-user-namespace -l env SHLVL=0 bash -l"'
 if-shell "! type reattach-to-user-namespace" 'set-option -g default-command "env SHLVL=0 bash -l"'
