consistency across tmux split-pane and vim window split
preferring Vim's behavior of putting new one on left/top of current one

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -162,6 +162,12 @@ bind m command-prompt -p "monitor-silence (seconds)" "setw monitor-activity off;
 
 ## vim style key bindings
 
+# put split pane left/top of the current one, just like vim
+unbind "\""
+unbind %
+bind "\"" split-window -v -b
+bind %    split-window -h -b
+
 # move around panes with j and k, a bit like vim
 unbind l
 bind h select-pane -L
@@ -186,8 +192,8 @@ bind C-o select-pane -t :.-
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # quicker vim-like split
-bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h"
-bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v"
+bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h -b"
+bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v -b"
 # uniform vim-tmux-navigation with Ctrl+Alt+h/j/k/l
 bind-key -n C-M-h if-shell "$is_vim" "send-keys C-\\ C-o C-M-h"  "select-pane -L"
 bind-key -n C-M-j if-shell "$is_vim" "send-keys C-\\ C-o C-M-j"  "select-pane -D"
