--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,9 +10,11 @@ unbind t
 bind t send-prefix
 unbind C-b
 
-# UTF-8
-set-option -g status-utf8 on
-set-window-option -g utf8 on
+# UTF-8 (necessary up to 2.1)
+if-shell "[ `tmux -V|cut -d' ' -f2` \\< 2.2 ]" "\
+    set-option -g status-utf8 on               ;\
+    set-window-option -g utf8 on               ;\
+    "
 
 # status and title format
 set-option -g set-titles-string "#T - #I:#W#F#S^#H"
