--- a/.tmux.conf
+++ b/.tmux.conf
@@ -164,11 +164,13 @@ bind m command-prompt -p "monitor-silence (seconds)" "setw monitor-activity off;
 
 ## vim style key bindings
 
-# put split pane left/top of the current one, just like vim
-unbind "\""
-unbind %
-bind "\"" split-window -v -b
-bind %    split-window -h -b
+# put split pane left/top of the current one, just like vim (-b supported since 2.0)
+split_before=""
+if-shell "! [ `tmux -V|cut -d' ' -f2` \\< 2.0 ]" "\
+    split_before=\"-b\";                          \
+    "
+unbind "\""; bind "\"" split-window -v $split_before
+unbind %   ; bind %    split-window -h $split_before
 
 # move around panes with j and k, a bit like vim
 unbind l
@@ -194,8 +196,8 @@ bind C-o select-pane -t :.-
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # quicker vim-like split
-bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h -b"
-bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v -b"
+bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h $split_before"
+bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v $split_before"
 # uniform vim-tmux-navigation with Ctrl+Alt+h/j/k/l
 bind-key -n C-M-h if-shell "$is_vim" "send-keys C-\\ C-o C-M-h"  "select-pane -L"
 bind-key -n C-M-j if-shell "$is_vim" "send-keys C-\\ C-o C-M-j"  "select-pane -D"
