Fixes -b for tmux >= 2.0

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -164,14 +164,6 @@ bind m command-prompt -p "monitor-silence (seconds)" "setw monitor-activity off;
 
 ## vim style key bindings
 
-# put split pane left/top of the current one, just like vim (-b supported since 2.0)
-split_before=""
-if-shell "! [ `tmux -V|cut -d' ' -f2` \\< 2.0 ]" "\
-    split_before=\"-b\";                          \
-    "
-unbind "\""; bind "\"" split-window -v $split_before
-unbind %   ; bind %    split-window -h $split_before
-
 # move around panes with j and k, a bit like vim
 unbind l
 bind h select-pane -L
@@ -191,13 +183,26 @@ unbind Tab
 bind Tab select-pane -t :.+
 bind C-o select-pane -t :.-
 
+unbind "\""; bind "\"" split-window -v
+unbind %   ; bind %    split-window -h
+# put split pane left/top of the current one, just like vim (-b supported since 2.0)
+# FIXME make below less ugly
+if-shell "[ ! `tmux -V|cut -d' ' -f2` \\< 2.0 ]"      "\
+    unbind %       ; bind %        split-window -h -b ;\
+    unbind \"\\\"\"; bind \"\\\"\" split-window -v -b ;\
+    "
 
 ## Vim and Tmux better together: https://blog.bugsnag.com/tmux-and-vim/
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 # quicker vim-like split
-bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h $split_before"
-bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v $split_before"
+bind-key -n C-M-v if-shell "$is_vim" "send-keys C-\\ C-o C-M-v"  "split-window -h"
+bind-key -n C-M-s if-shell "$is_vim" "send-keys C-\\ C-o C-w s"  "split-window -v"
+# XXX ugliness below is inevitable for tmux >= 2.0
+if-shell "[ ! `tmux -V|cut -d' ' -f2` \\< 2.0 ]"                                                   "\
+    bind-key -n C-M-v if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-M-v\"  \"split-window -h -b\" ;\
+    bind-key -n C-M-s if-shell \"\$is_vim\" \"send-keys C-\\\\ C-o C-w s\"  \"split-window -v -b\" ;\
+    "
 # uniform vim-tmux-navigation with Ctrl+Alt+h/j/k/l
 bind-key -n C-M-h if-shell "$is_vim" "send-keys C-\\ C-o C-M-h"  "select-pane -L"
 bind-key -n C-M-j if-shell "$is_vim" "send-keys C-\\ C-o C-M-j"  "select-pane -D"
