--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,13 @@ unbind t
 bind t send-prefix
 unbind C-b
 
+# toggle prefix suitable for (double-decker) tmux in tmux windows
+bind-key -n C-M-x \
+    if-shell "[ \"`tmux show-options prefix`\" = 'prefix C-t' ]" \
+        "set-option prefix C-s" \
+        "set-option prefix C-t" \
+        #
+
 # UTF-8 (necessary up to 2.1)
 if-shell "[ `tmux -V|cut -d' ' -f2` \\< 2.2 ]" "\
     set-option -g status-utf8 on               ;\
