M-Up to enter tmux copy-mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,9 +13,24 @@ unbind C-b
 # toggle prefix suitable for (double-decker) tmux in tmux windows
 bind-key -n C-M-x \
     if-shell "[ \"`tmux show-options prefix`\" = 'prefix C-t' ]" \
-        "set-option prefix C-s" \
-        "set-option prefix C-t" \
+        "set-option prefix C-s; unbind -n M-Up;           unbind -n M-PageUp" \
+        "set-option prefix C-t;   bind -n M-Up copy-mode;   bind -n M-PageUp copy-mode" \
         #
+
+## easy/uniform copy mode
+# See also: https://medium.freecodecamp.org/tmux-in-practice-scrollback-buffer-47d5ffa71c93
+# trigger copy mode by
+bind -n M-Up     copy-mode
+bind -n M-PageUp copy-mode
+# Scroll up/down by 1 line, half screen, whole screen
+if-shell "[ `tmux -V|cut -d' ' -f2` \\>= 2.4 ]"             "\
+    bind -T copy-mode M-Up        send-keys -X scroll-up    ;\
+    bind -T copy-mode M-Down      send-keys -X scroll-down  ;\
+    bind -T copy-mode M-PageUp    send-keys -X halfpage-up  ;\
+    bind -T copy-mode M-PageDown  send-keys -X halfpage-down;\
+    bind -T copy-mode PageUp      send-keys -X page-up      ;\
+    bind -T copy-mode PageDown    send-keys -X page-down    ;\
+    "
 
 # UTF-8 (necessary up to 2.1)
 if-shell "[ `tmux -V|cut -d' ' -f2` \\< 2.2 ]" "\
